# nonebot-adapter-gewe

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot/adapters/gewe/: adapter.py  bot.py  config.py  event.py  exception.py  message.py  model.py  utils.py
nonebot/adapters/gewechat/: adapter.py  api_model.py  bot.py  config.py  event.py  event_store.py  exception.py  message.py  model.py  template.py  utils.py
