[tool.poetry]
name = "nonebot-adapter-gewe"
authors = ["ShineLight <shine_light@qq.com>", "sqiao7 <sqiao999@gmail.com>"]
version = "0.6.1"
readme = "README.md"
license = "MIT"
description = "NoneBot adapter for GEWE"
homepage = "https://github.com/sqiao7/nonebot-adapter-gewe"
repository = "https://github.com/sqiao7/nonebot-adapter-gewe"
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nonebot2 = ">=2.4.2"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"
qrcode = "^8.0"
ujson = "^5.10.0"
selectolax = "^0.3.28"
pypng = { version = ">=0.20220715.0", optional = true }

[tool.poetry.extras]
png = ["pypng"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
addopts = "--cov nonebot/adapters/gewe --cov-report term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.3.4",
    "pytest-cov<7.0.0,>=6.0.0",
]

[tool.pdm.build]
includes = ["nonebot"]

[project]
name = "nonebot-adapter-gewe"
version = "0.6.1"
description = "NoneBot adapter for  (wechat)"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
    {name = "ShineLight", email = "shine_light@qq.com"},
    {name = "sqiao7", email = "sqiao999@gmail.com"},
]
dependencies = [
    "nonebot2>=2.4.2",
    "pydantic!=2.5.0,!=2.5.1,<3.0.0,>=1.10.0",
    "qrcode<9.0,>=8.0",
    "ujson<6.0.0,>=5.10.0",
    "selectolax<1.0.0,>=0.3.28",
]

requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/sqiao7/nonebot-adapter-gewe"
repository = "https://github.com/sqiao7/nonebot-adapter-gewe"

[project.optional-dependencies]
png = [
    "pypng>=0.20220715.0",
]
